--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <a href="papas pizzeria.html">
                 <img src="papas.jpeg" width="200px" height="200px">
             </a>
-            <h2>Papas Pizzeria</h2>
+            <a href="papas pizzeria.html"> Papas Pizzeria </a>
         </body>
     </head>
 </html>
