--- a/papas pizzeria.html
+++ b/papas pizzeria.html
@@ -2,7 +2,7 @@
   <head>
     <body>
       <h1>Play papas pizzeria</hi>
-        <iframe1 src="https://m.coolmathgames.com/0-papas-pizzeria" class="square" width="800px" height="600px" id="html5game" scrolling="no"> </iframe1>
+        <iframe1 src="google.com"> </iframe1>
     </body>
   </head>
 </html>
