--- a/papas pizzeria.html
+++ b/papas pizzeria.html
@@ -2,7 +2,7 @@
   <head>
     <body>
       <h1>Play papas pizzeria</hi>
-        <iframe1 src="https://www.google.com" title="google"></iframe1>
+        <iframe src="https://www.google.com" title="google"></iframe>
     </body>
   </head>
 </html>
