--- a/papas pizzeria.html
+++ b/papas pizzeria.html
@@ -2,7 +2,7 @@
   <head>
     <body>
       <h1>Play papas pizzeria</hi>
-        <iframe src="https://www.coolmathgames.com/0-papas-pizzeria" title="papas pizzeria"></iframe>
+        <iframe src="https://m.coolmathgames.com/0-papas-pizzeria" noborder="0" width="830" height="800" scrolling="yes" seamless></iframe>
     </body>
   </head>
 </html>
