--- a/papas pizzeria.html
+++ b/papas pizzeria.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <body>
-      <h1>Play papas pizzeria</hi>
+      <font style="Impact" color="green">Play papas pizzeria</font>
         <iframe src="https://m.coolmathgames.com/0-papas-pizzeria" noborder="0" width="830" height="800" scrolling="yes" seamless></iframe>
     </body>
   </head>
