--- a/papas pizzeria.html
+++ b/papas pizzeria.html
@@ -2,7 +2,7 @@
   <head>
     <body>
       <font style="Impact" color="green">Play papas pizzeria</font>
-        <iframe src="https://m.coolmathgames.com/0-papas-pizzeria" noborder="0" width="830" height="800" scrolling="yes" seamless></iframe>
+      <embed width="600" height="450" src="http://games.mochiads.com/c/g/papas-pizzeria/pizzeria_mochi.swf"  type="application/x-shockwave-flash"></embed><br/>Play more games at <a href="http://www.flipline.com/">Flipline Studios</a>
     </body>
   </head>
 </html>
