--- a/papas pizzeria.html
+++ b/papas pizzeria.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <body><embed width="600" height="450" src="http://games.mochiads.com/c/g/papas-pizzeria/pizzeria_mochi.swf"  type="application/x-shockwave-flash"></embed><br/>Play more games at <a href="http://www.flipline.com/">Flipline Studios</a>
+    <body>
+      <embed width="600" height="450" src="http://games.mochiads.com/c/g/papas-pizzeria/pizzeria_mochi.swf"  type="application/x-shockwave-flash"></embed><br/>Play more games at <a href="http://www.flipline.com/">Flipline Studios</a>
     </body>
   </head>
 </html>
