--- a/papas pizzeria.html
+++ b/papas pizzeria.html
@@ -1,5 +1,5 @@
 <html>
     <body>
-      <embed width="600" height="450" src="http://games.mochiads.com/c/g/papas-pizzeria/pizzeria_mochi.swf"  type="application/x-shockwave-flash"></embed><br/>Play more games at <a href="http://www.flipline.com/">Flipline Studios</a>
+      <embed width="600" height="450" src="https://games.mochiads.com/c/g/papas-pizzeria/pizzeria_mochi.swf"  type="application/x-shockwave-flash"></embed><br/>Play more games at <a href="http://www.flipline.com/">Flipline Studios</a>
     </body>
 </html>
