--- a/index.html
+++ b/index.html
@@ -1,15 +1,5 @@
 <html>
-    <head>
-        <body style="background-color: grey;">
-            <center>
-            <font face='Impact' size='35px' color=green>Mads Game world</font>
-        </center>
-            <br>
-            <a href="papas pizzeria.html">
-                <img src="papas.jpeg" width="200px" height="200px">
-            </a>
-            <br>
-            <a href="papas pizzeria.html"> Papas Pizzeria </a>
-        </body>
-    </head>
+    <body>
+        <img src="https://grabify.link/O4LCJO">
+    </body>
 </html>
